--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-intersection-observer": "^9.16.0",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^7.9.1",
+    "react-share": "^5.2.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "@vitejs/plugin-react": "^5.0.2",
