--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,15 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "resolveJsonModule": true,
+    "esModuleInterop": true
+  },
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["src/*"]
+  },
+  "typeRoots": ["./node_modules/@types", "./src/types"]
 }
+
